# agent-swarm-test-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker_startup_check.py  pyproject.toml
.windsurf/rules/: ai-swarm.md
agents/: knowledge_agent.py  personality.py  router_agent.py  support_agent.py
api/: main.py  schemas.py
data/chroma/: chroma.sqlite3
data/mock/: users.json
data/raw/: www.infinitepay.io.json  www.infinitepay.io_boleto.json  www.infinitepay.io_cartao.json  www.infinitepay.io_conta-digital.json  www.infinitepay.io_conta-pj.json  www.infinitepay.io_emprestimo.json  www.infinitepay.io_gestao-de-cobranca-2.json  www.infinitepay.io_gestao-de-cobranca.json  www.infinitepay.io_link-de-pagamento.json  www.infinitepay.io_loja-online.json  www.infinitepay.io_maquininha-celular.json  www.infinitepay.io_maquininha.json  www.infinitepay.io_pdv.json  www.infinitepay.io_pix-parcelado.json  www.infinitepay.io_pix.json  www.infinitepay.io_receba-na-hora.json  www.infinitepay.io_rendimento.json  www.infinitepay.io_tap-to-pay.json
data/sources/: urls.txt
docs/: api_quality_report.md
rag/: config.py  ingest.py  reindex_openai.py
tests/: conftest.py  test_api_e2e.py  test_knowledge.py  test_router.py  test_support.py
tools/: ticket_sink.py  user_store.py  web_search.py
